--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "serve": "^14.2.5",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.2",
     "vite-plugin-pwa": "^1.0.3"
