--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preview:prod": "vite preview --host",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
